--- a/src/main/resources/blaplafla/todolist/views/gui/Detail.fxml
+++ b/src/main/resources/blaplafla/todolist/views/gui/Detail.fxml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <?import javafx.scene.control.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="742.0" prefWidth="400.0"
-            style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/18"
+            style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/16"
             fx:controller="blaplafla.todolist.views.gui.Detail">
     <MenuBar layoutX="10.0" layoutY="14.0" prefHeight="30.0" prefWidth="429.0" style="-fx-view-order: 1;"
              AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="9.0">
@@ -19,24 +20,77 @@
             <MenuItem fx:id="addTask" mnemonicParsing="false" onAction="#add" text="Add task"/>
         </Menu>
     </MenuBar>
-    <GridPane layoutX="9.0" layoutY="50.0" prefHeight="30.0" prefWidth="421.0" AnchorPane.leftAnchor="9.0"
-              AnchorPane.rightAnchor="9.0" AnchorPane.topAnchor="45.0">
+    <GridPane layoutX="9.0" layoutY="54.0" AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="9.0">
         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
-            <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0"/>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="327.0" minWidth="10.0" prefWidth="327.0"/>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="75.0" minWidth="10.0" prefWidth="55.0"/>
         </columnConstraints>
         <rowConstraints>
             <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
         </rowConstraints>
-        <Label fx:id="taskName" text="Task name: AAA">
+        <Label fx:id="taskName" prefHeight="29.0" prefWidth="252.0" text="Task name: AAA">
             <font>
                 <Font name="System Bold" size="20.0"/>
             </font>
         </Label>
-        <Button fx:id="refresh" mnemonicParsing="false" onAction="#addData" prefHeight="30.0" prefWidth="80.0"
-                text="Refresh" GridPane.columnIndex="1"/>
+        <ImageView fx:id="back" fitHeight="32.0" fitWidth="32.0" onMouseClicked="#back" pickOnBounds="true"
+                   preserveRatio="true" GridPane.columnIndex="1">
+            <cursor>
+                <Cursor fx:constant="HAND"/>
+            </cursor>
+            <Image url="@icon/arrow.png"/>
+        </ImageView>
     </GridPane>
-    <GridPane layoutX="9.0" layoutY="75.0" AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="9.0">
+    <GridPane layoutX="9.0" layoutY="90.0" AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="9.0"
+              AnchorPane.topAnchor="90.0">
+        <columnConstraints>
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0"/>
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0"/>
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0"/>
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0"/>
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0"/>
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
+        </rowConstraints>
+        <ImageView fx:id="refresh" fitHeight="32.0" fitWidth="32.0" onMouseClicked="#addData" pickOnBounds="true"
+                   preserveRatio="true" GridPane.columnIndex="4">
+            <cursor>
+                <Cursor fx:constant="HAND"/>
+            </cursor>
+            <Image url="@icon/refresh.png"/>
+        </ImageView>
+        <ImageView fx:id="editIcon" fitHeight="32.0" fitWidth="32.0" onMouseClicked="#edit" pickOnBounds="true"
+                   preserveRatio="true" GridPane.columnIndex="2">
+            <cursor>
+                <Cursor fx:constant="HAND"/>
+            </cursor>
+            <Image url="@icon/edit.png"/>
+        </ImageView>
+        <ImageView fx:id="deleteIcon" fitHeight="32.0" fitWidth="32.0" onMouseClicked="#delete" pickOnBounds="true"
+                   preserveRatio="true">
+            <cursor>
+                <Cursor fx:constant="HAND"/>
+            </cursor>
+            <Image url="@icon/delete.png"/>
+        </ImageView>
+        <ImageView fx:id="toggleIcon" fitHeight="32.0" fitWidth="32.0" onMouseClicked="#toggle" pickOnBounds="true"
+                   preserveRatio="true" GridPane.columnIndex="1">
+            <cursor>
+                <Cursor fx:constant="HAND"/>
+            </cursor>
+            <Image url="@icon/swap.png"/>
+        </ImageView>
+        <ImageView fx:id="plus1" fitHeight="32.0" fitWidth="32.0" onMouseClicked="#add" pickOnBounds="true"
+                   preserveRatio="true" GridPane.columnIndex="3">
+            <cursor>
+                <Cursor fx:constant="HAND"/>
+            </cursor>
+            <Image url="@icon/plus.png"/>
+        </ImageView>
+    </GridPane>
+    <GridPane layoutX="9.0" layoutY="75.0" AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="9.0"
+              AnchorPane.topAnchor="130.0">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
         </columnConstraints>
@@ -51,10 +105,13 @@
             <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
             <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
         </rowConstraints>
-        <Label fx:id="undone" text="List Undone SubTask: ">
+        <Label fx:id="undone" onMouseClicked="#undoneList" text="List Undone SubTask: ">
             <font>
                 <Font name="System Bold" size="20.0"/>
             </font>
+            <cursor>
+                <Cursor fx:constant="HAND"/>
+            </cursor>
         </Label>
         <ListView fx:id="listViewTask" prefHeight="318.0" prefWidth="429.0" GridPane.rowIndex="1"/>
         <GridPane prefHeight="25.0" prefWidth="429.0" GridPane.rowIndex="2">
@@ -70,11 +127,17 @@
                 <font>
                     <Font size="18.0"/>
                 </font>
+                <cursor>
+                    <Cursor fx:constant="HAND"/>
+                </cursor>
             </Label>
             <Label fx:id="next" onMouseClicked="#next" text="Next" textAlignment="RIGHT" GridPane.columnIndex="2">
                 <font>
                     <Font size="18.0"/>
                 </font>
+                <cursor>
+                    <Cursor fx:constant="HAND"/>
+                </cursor>
             </Label>
             <Label fx:id="pageLabel" layoutX="10.0" layoutY="10.0" text="Page 1" GridPane.columnIndex="1">
                 <font>
@@ -82,19 +145,15 @@
                 </font>
             </Label>
         </GridPane>
-        <Label fx:id="lastDone" text="Last Done SubTask: aaa " GridPane.rowIndex="3">
+        <Label fx:id="lastDone" onMouseClicked="#doneList" text="Last Done SubTask: aaa " GridPane.rowIndex="3">
             <font>
                 <Font name="System Bold" size="20.0"/>
             </font>
+            <cursor>
+                <Cursor fx:constant="HAND"/>
+            </cursor>
         </Label>
         <Label fx:id="deadline" text="Deadline: 31/12/2022 23h59m59s " GridPane.rowIndex="5">
-            <font>
-                <Font size="18.0"/>
-            </font>
-        </Label>
-        <Label fx:id="desc" alignment="TOP_LEFT" maxHeight="180.0" prefHeight="155.0" prefWidth="411.0"
-               text="Description: Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
-               wrapText="true" GridPane.rowIndex="8">
             <font>
                 <Font size="18.0"/>
             </font>
@@ -114,14 +173,21 @@
                 <Font size="18.0"/>
             </font>
         </Label>
+        <ScrollPane prefHeight="67.0" prefWidth="382.0" GridPane.rowIndex="8">
+            <Label fx:id="desc" alignment="TOP_LEFT" prefWidth="369.0"
+                   text="Description: Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
+                   wrapText="true">
+                <font>
+                    <Font size="18.0"/>
+                </font>
+            </Label>
+        </ScrollPane>
     </GridPane>
-    <GridPane prefHeight="25.0" prefWidth="429.0">
-        <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
-            <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0"/>
-        </columnConstraints>
-        <rowConstraints>
-            <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
-        </rowConstraints>
-    </GridPane>
+    <ImageView fx:id="plus" fitHeight="150.0" fitWidth="200.0" onMouseClicked="#add" pickOnBounds="true"
+               preserveRatio="true" AnchorPane.leftAnchor="120.0" AnchorPane.topAnchor="250.0">
+        <cursor>
+            <Cursor fx:constant="HAND"/>
+        </cursor>
+        <Image url="@icon/plus.png"/>
+    </ImageView>
 </AnchorPane>
