--- a/src/main/resources/blaplafla/todolist/views/gui/DetailSub.fxml
+++ b/src/main/resources/blaplafla/todolist/views/gui/DetailSub.fxml
@@ -1,23 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <?import javafx.scene.control.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="742.0" prefWidth="400.0"
             style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/18"
             fx:controller="blaplafla.todolist.views.gui.DetailSub">
-    <Label fx:id="taskName" layoutX="9.0" layoutY="25.0" prefHeight="29.0" prefWidth="291.0" text="Main Task: AAA"
-           AnchorPane.leftAnchor="9.0">
+    <MenuBar layoutX="20.0" layoutY="24.0" prefHeight="30.0" prefWidth="429.0" style="-fx-view-order: 1;"
+             AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="9.0">
+        <Menu fx:id="task1" mnemonicParsing="false" text="Task">
+            <MenuItem fx:id="delete1" mnemonicParsing="false" onAction="#delete" text="Delete"/>
+            <MenuItem fx:id="toggle1" mnemonicParsing="false" onAction="#toggle" text="Toggle"/>
+            <MenuItem fx:id="edit1" mnemonicParsing="false" onAction="#edit" text="Edit"/>
+        </Menu>
+    </MenuBar>
+    <GridPane layoutX="9.0" layoutY="63.0" AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="9.0">
+        <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
+        </rowConstraints>
+        <Label fx:id="taskName" prefHeight="29.0" prefWidth="291.0" text="Main Task: AAA">
+            <font>
+                <Font name="System Bold" size="20.0"/>
+            </font>
+        </Label>
+        <ImageView fx:id="back" fitHeight="32.0" fitWidth="44.0" onMouseClicked="#back" pickOnBounds="true"
+                   preserveRatio="true" GridPane.columnIndex="1">
+            <cursor>
+                <Cursor fx:constant="HAND"/>
+            </cursor>
+            <Image url="@icon/arrow.png"/>
+        </ImageView>
+    </GridPane>
+    <Label fx:id="subtask" layoutX="9.0" layoutY="144.0" text="SubTask: aaa ">
         <font>
             <Font name="System Bold" size="20.0"/>
         </font>
     </Label>
-    <Label fx:id="subtask" layoutX="9.0" layoutY="105.0" text="SubTask: aaa ">
-        <font>
-            <Font name="System Bold" size="20.0"/>
-        </font>
-    </Label>
-    <GridPane layoutX="9.0" layoutY="134.0">
+    <GridPane layoutX="9.0" layoutY="173.0" AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="9.0">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
         </columnConstraints>
@@ -43,20 +67,22 @@
                 <Font size="18.0"/>
             </font>
         </Label>
-        <Label fx:id="desc" alignment="TOP_LEFT" maxHeight="180.0" prefWidth="429.0"
-               text="Description: Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
-               wrapText="true" GridPane.rowIndex="4">
-            <font>
-                <Font size="18.0"/>
-            </font>
-        </Label>
         <Label fx:id="detail" text="Detail">
             <font>
                 <Font name="System Bold" size="20.0"/>
             </font>
         </Label>
+        <ScrollPane prefHeight="200.0" prefWidth="196.0" GridPane.rowIndex="4">
+            <Label fx:id="desc" alignment="TOP_LEFT" prefWidth="370.0"
+                   text="Description: Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
+                   wrapText="true">
+                <font>
+                    <Font size="18.0"/>
+                </font>
+            </Label>
+        </ScrollPane>
     </GridPane>
-    <GridPane layoutX="9.0" layoutY="64.0" prefHeight="30.0" prefWidth="429.0" AnchorPane.leftAnchor="9.0"
+    <GridPane layoutX="9.0" layoutY="103.0" prefHeight="30.0" prefWidth="429.0" AnchorPane.leftAnchor="9.0"
               AnchorPane.rightAnchor="9.0">
         <columnConstraints>
             <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0"/>
@@ -67,13 +93,33 @@
         <rowConstraints>
             <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
         </rowConstraints>
-        <Button fx:id="edit" mnemonicParsing="false" onAction="#edit" prefHeight="30.0" prefWidth="80.0" text="Edit"
-                GridPane.columnIndex="2"/>
-        <Button fx:id="toggle" mnemonicParsing="false" onAction="#toggle" prefHeight="30.0" prefWidth="80.0"
-                text="Toggle" GridPane.columnIndex="1"/>
-        <Button fx:id="delete" mnemonicParsing="false" onAction="#delete" prefHeight="30.0" prefWidth="80.0"
-                text="Delete"/>
-        <Button fx:id="refresh" mnemonicParsing="false" onAction="#addData" prefHeight="30.0" prefWidth="80.0"
-                text="Refresh" GridPane.columnIndex="3"/>
+        <ImageView fx:id="delete" fitHeight="32.0" fitWidth="32.0" onMouseClicked="#delete" pickOnBounds="true"
+                   preserveRatio="true">
+            <Image url="@icon/delete.png"/>
+            <cursor>
+                <Cursor fx:constant="HAND"/>
+            </cursor>
+        </ImageView>
+        <ImageView fx:id="toggle" fitHeight="32.0" fitWidth="32.0" onMouseClicked="#toggle" pickOnBounds="true"
+                   preserveRatio="true" GridPane.columnIndex="1">
+            <Image url="@icon/swap.png"/>
+            <cursor>
+                <Cursor fx:constant="HAND"/>
+            </cursor>
+        </ImageView>
+        <ImageView fx:id="edit" fitHeight="32.0" fitWidth="32.0" onMouseClicked="#edit" pickOnBounds="true"
+                   preserveRatio="true" GridPane.columnIndex="2">
+            <Image url="@icon/edit.png"/>
+            <cursor>
+                <Cursor fx:constant="HAND"/>
+            </cursor>
+        </ImageView>
+        <ImageView fx:id="refresh" fitHeight="32.0" fitWidth="32.0" onMouseClicked="#addData" pickOnBounds="true"
+                   preserveRatio="true" GridPane.columnIndex="3">
+            <Image url="@icon/refresh.png"/>
+            <cursor>
+                <Cursor fx:constant="HAND"/>
+            </cursor>
+        </ImageView>
     </GridPane>
 </AnchorPane>
