--- a/src/main/resources/blaplafla/todolist/views/gui/DoneSub.fxml
+++ b/src/main/resources/blaplafla/todolist/views/gui/DoneSub.fxml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <?import javafx.scene.control.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="702.0" prefWidth="447.0"
             style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/18"
             fx:controller="blaplafla.todolist.views.gui.DoneSub">
-    <ListView fx:id="listViewTask" layoutX="9.0" layoutY="132.0" prefHeight="518.0" prefWidth="429.0"
+    <ListView fx:id="listViewTask" layoutX="9.0" layoutY="175.0" prefHeight="295.0" prefWidth="429.0"
               AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="9.0"/>
-    <GridPane layoutX="9.0" layoutY="657.0" prefHeight="25.0" prefWidth="429.0" AnchorPane.leftAnchor="9.0"
-              AnchorPane.rightAnchor="9.0" AnchorPane.topAnchor="657.0" GridPane.rowIndex="2">
+    <GridPane layoutX="10.0" layoutY="470.0" prefHeight="25.0" prefWidth="429.0" AnchorPane.leftAnchor="10.0"
+              AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="480.0" GridPane.rowIndex="2">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
             <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
@@ -22,11 +23,17 @@
             <font>
                 <Font size="18.0"/>
             </font>
+            <cursor>
+                <Cursor fx:constant="HAND"/>
+            </cursor>
         </Label>
         <Label fx:id="next" onMouseClicked="#next" text="Next" textAlignment="RIGHT" GridPane.columnIndex="2">
             <font>
                 <Font size="18.0"/>
             </font>
+            <cursor>
+                <Cursor fx:constant="HAND"/>
+            </cursor>
         </Label>
         <Label fx:id="pageLabel" layoutX="10.0" layoutY="10.0" text="Page 1" GridPane.columnIndex="1">
             <font>
@@ -34,11 +41,23 @@
             </font>
         </Label>
     </GridPane>
-    <GridPane layoutX="9.0" layoutY="43.0" prefHeight="30.0" prefWidth="409.0" AnchorPane.leftAnchor="9.0"
-              AnchorPane.rightAnchor="9.0">
+    <Label fx:id="mainTaskName" layoutX="9.0" layoutY="49.0" text="Task name: blablabla" AnchorPane.leftAnchor="9.0">
+        <font>
+            <Font name="System Bold" size="20.0"/>
+        </font>
+    </Label>
+    <MenuBar layoutX="19.0" layoutY="24.0" prefHeight="30.0" prefWidth="429.0" style="-fx-view-order: 1;"
+             AnchorPane.leftAnchor="9.0" AnchorPane.topAnchor="14.0">
+        <Menu fx:id="task" mnemonicParsing="false" text="Task">
+            <MenuItem fx:id="delete1" mnemonicParsing="false" onAction="#delete" text="Delete"/>
+            <MenuItem fx:id="toggle1" mnemonicParsing="false" onAction="#toggle" text="Toggle"/>
+            <MenuItem fx:id="detail1" mnemonicParsing="false" onAction="#detail" text="Edit"/>
+        </Menu>
+    </MenuBar>
+    <GridPane layoutX="16.0" layoutY="80.0" AnchorPane.leftAnchor="9.0">
         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
-            <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0"/>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="383.0" minWidth="10.0" prefWidth="318.0"/>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="168.0" minWidth="10.0" prefWidth="113.0"/>
         </columnConstraints>
         <rowConstraints>
             <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
@@ -48,11 +67,17 @@
                 <Font name="System Bold" size="20.0"/>
             </font>
         </Label>
-        <Button fx:id="refresh" mnemonicParsing="false" onAction="#addData" prefHeight="30.0" prefWidth="80.0"
-                text="Refresh" GridPane.columnIndex="1"/>
+        <ImageView fx:id="back" fitHeight="32.0" fitWidth="53.0" onMouseClicked="#back" pickOnBounds="true"
+                   preserveRatio="true" GridPane.columnIndex="1">
+            <cursor>
+                <Cursor fx:constant="HAND"/>
+            </cursor>
+            <Image url="@icon/arrow.png"/>
+        </ImageView>
     </GridPane>
-    <GridPane layoutX="9.0" layoutY="85.0" AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="9.0">
+    <GridPane layoutX="10.0" layoutY="120.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="8.0">
         <columnConstraints>
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0"/>
             <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0"/>
             <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0"/>
             <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0"/>
@@ -60,16 +85,33 @@
         <rowConstraints>
             <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
         </rowConstraints>
-        <Button fx:id="detail" mnemonicParsing="false" onAction="#detail" prefWidth="80.0" text="Detail"
-                GridPane.columnIndex="2"/>
-        <Button fx:id="toggle" mnemonicParsing="false" onAction="#toggle" prefWidth="80.0" text="Toggle"
-                GridPane.columnIndex="1"/>
-        <Button fx:id="delete" mnemonicParsing="false" onAction="#delete" prefWidth="80.0" text="Delete"/>
+        <ImageView fx:id="delete" fitHeight="32.0" fitWidth="32.0" onMouseClicked="#delete" pickOnBounds="true"
+                   preserveRatio="true">
+            <cursor>
+                <Cursor fx:constant="HAND"/>
+            </cursor>
+            <Image url="@icon/delete.png"/>
+        </ImageView>
+        <ImageView fx:id="toggle" fitHeight="32.0" fitWidth="32.0" layoutX="30.0" layoutY="10.0"
+                   onMouseClicked="#toggle" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1">
+            <cursor>
+                <Cursor fx:constant="HAND"/>
+            </cursor>
+            <Image url="@icon/close.png"/>
+        </ImageView>
+        <ImageView fx:id="detail" fitHeight="32.0" fitWidth="32.0" onMouseClicked="#detail" pickOnBounds="true"
+                   preserveRatio="true" GridPane.columnIndex="2">
+            <cursor>
+                <Cursor fx:constant="HAND"/>
+            </cursor>
+            <Image url="@icon/info.png"/>
+        </ImageView>
+        <ImageView fx:id="refresh" fitHeight="32.0" fitWidth="32.0" onMouseClicked="#addData" pickOnBounds="true"
+                   preserveRatio="true" GridPane.columnIndex="3">
+            <cursor>
+                <Cursor fx:constant="HAND"/>
+            </cursor>
+            <Image url="@icon/refresh.png"/>
+        </ImageView>
     </GridPane>
-    <Label fx:id="mainTaskName" layoutX="9.0" layoutY="14.0" text="Task name: blablabla" AnchorPane.leftAnchor="9.0"
-           AnchorPane.topAnchor="14.0">
-        <font>
-            <Font name="System Bold" size="20.0"/>
-        </font>
-    </Label>
 </AnchorPane>
