--- a/src/main/resources/blaplafla/todolist/views/gui/Index.fxml
+++ b/src/main/resources/blaplafla/todolist/views/gui/Index.fxml
@@ -1,14 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <?import javafx.scene.control.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="742.0" prefWidth="447.0"
             style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/18"
             fx:controller="blaplafla.todolist.views.gui.Index">
-    <TextField fx:id="usernameField" layoutX="10.0" layoutY="54.0" onAction="#doneSetUsername"
-               onInputMethodTextChanged="#doneSetUsername" prefHeight="26.0" prefWidth="429.0" promptText="aaa"
-               scaleZ="10.0" style="-fx-view-order: 500;" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="8.0"/>
+    <GridPane layoutX="10.0" layoutY="54.0" prefHeight="29.0" prefWidth="367.0" AnchorPane.leftAnchor="9.0"
+              AnchorPane.rightAnchor="9.0">
+        <columnConstraints>
+            <ColumnConstraints hgrow="ALWAYS"/>
+            <ColumnConstraints hgrow="ALWAYS"/>
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
+        </rowConstraints>
+        <TextField fx:id="usernameField" editable="false" onAction="#doneSetUsername"
+                   onInputMethodTextChanged="#doneSetUsername" promptText="aaa" scaleZ="10.0"
+                   style="-fx-view-order: 500;" GridPane.columnIndex="1"/>
+        <Label fx:id="cat" onMouseClicked="#setUsername" text="Label" GridPane.hgrow="ALWAYS"
+               GridPane.vgrow="ALWAYS">
+            <font>
+                <Font name="System Bold" size="20.0"/>
+            </font>
+            <cursor>
+                <Cursor fx:constant="HAND"/>
+            </cursor>
+        </Label>
+    </GridPane>
     <MenuBar layoutX="14.0" layoutY="14.0" prefHeight="30.0" prefWidth="429.0" style="-fx-view-order: 1;"
              AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="9.0" AnchorPane.topAnchor="15.0">
         <Menu fx:id="file" mnemonicParsing="false" text="File">
@@ -23,36 +43,56 @@
             <MenuItem fx:id="addtask" mnemonicParsing="false" onAction="#add" text="Add task"/>
         </Menu>
     </MenuBar>
-    <GridPane layoutX="9.0" layoutY="85.0" prefHeight="30.0" prefWidth="365.0">
+    <GridPane layoutX="9.0" layoutY="98.0" AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="9.0">
         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
-            <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0"/>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="354.0" minWidth="10.0" prefWidth="330.0"/>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="108.0" minWidth="0.0" prefWidth="57.0"/>
+            <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="67.0" minWidth="10.0" prefWidth="42.0"/>
         </columnConstraints>
         <rowConstraints>
             <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
         </rowConstraints>
-        <Label fx:id="undone" text="Undone list">
+        <Label fx:id="undone" onMouseClicked="#undoneList" text="Undone list">
             <font>
                 <Font name="System Bold" size="20.0"/>
             </font>
+            <cursor>
+                <Cursor fx:constant="HAND"/>
+            </cursor>
         </Label>
-        <Button fx:id="refresh" mnemonicParsing="false" onAction="#addData" prefHeight="30.0" prefWidth="80.0"
-                text="Refresh" GridPane.columnIndex="1"/>
+        <ImageView fx:id="refresh" fitHeight="32.0" fitWidth="32.0" onMouseClicked="#addData" pickOnBounds="true"
+                   preserveRatio="true" GridPane.columnIndex="2">
+            <Image url="@icon/refresh.png"/>
+            <cursor>
+                <Cursor fx:constant="HAND"/>
+            </cursor>
+        </ImageView>
+        <ImageView fx:id="plus1" fitHeight="32.0" fitWidth="32.0" onMouseClicked="#add" pickOnBounds="true"
+                   preserveRatio="true" GridPane.columnIndex="1">
+            <Image url="@icon/plus.png"/>
+            <cursor>
+                <Cursor fx:constant="HAND"/>
+            </cursor>
+        </ImageView>
     </GridPane>
-    <ListView fx:id="listViewTask" layoutX="9.0" layoutY="125.0" prefHeight="518.0" prefWidth="429.0"
+    <ListView fx:id="listViewTask" layoutX="9.0" layoutY="139.0" prefHeight="518.0" prefWidth="429.0"
               AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="9.0"/>
-    <Label fx:id="lastDone" layoutX="10.0" layoutY="684.0" text="Last Done Task: aaa " AnchorPane.leftAnchor="10.0"
-           AnchorPane.topAnchor="684.0">
+    <Label fx:id="lastDone" layoutX="10.0" layoutY="698.0" onMouseClicked="#doneList" text="Last Done Task: aaa "
+           AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="698.0">
         <font>
             <Font name="System Bold" size="20.0"/>
         </font>
+        <cursor>
+            <Cursor fx:constant="HAND"/>
+        </cursor>
     </Label>
-    <GridPane layoutX="10.0" layoutY="643.0" prefHeight="25.0" prefWidth="429.0" AnchorPane.leftAnchor="10.0"
-              AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="650.0" GridPane.rowIndex="2">
+    <GridPane layoutX="10.0" layoutY="664.0" prefHeight="25.0" prefWidth="429.0" AnchorPane.leftAnchor="10.0"
+              AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="664.0" GridPane.rowIndex="2">
         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
-            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-            <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0"/>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="161.0" minWidth="10.0" prefWidth="161.0"/>
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="178.0" minWidth="10.0"
+                               prefWidth="112.0"/>
+            <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="161.0" minWidth="10.0" prefWidth="156.0"/>
         </columnConstraints>
         <rowConstraints>
             <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
@@ -61,11 +101,17 @@
             <font>
                 <Font size="18.0"/>
             </font>
+            <cursor>
+                <Cursor fx:constant="HAND"/>
+            </cursor>
         </Label>
         <Label fx:id="next" onMouseClicked="#next" text="Next" textAlignment="RIGHT" GridPane.columnIndex="2">
             <font>
                 <Font size="18.0"/>
             </font>
+            <cursor>
+                <Cursor fx:constant="HAND"/>
+            </cursor>
         </Label>
         <Label fx:id="pageLabel" layoutX="10.0" layoutY="10.0" text="Page 1" GridPane.columnIndex="1">
             <font>
@@ -73,4 +119,11 @@
             </font>
         </Label>
     </GridPane>
+    <ImageView fx:id="plus" fitHeight="150.0" fitWidth="200.0" layoutX="120.0" layoutY="310.0" onMouseClicked="#add"
+               pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="120.0" AnchorPane.topAnchor="310.0">
+        <Image url="@icon/plus.png"/>
+        <cursor>
+            <Cursor fx:constant="HAND"/>
+        </cursor>
+    </ImageView>
 </AnchorPane>
