--- a/src/main/resources/blaplafla/todolist/views/gui/SubTaskListCellFull.fxml
+++ b/src/main/resources/blaplafla/todolist/views/gui/SubTaskListCellFull.fxml
@@ -1,40 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:id="anchorPane" prefHeight="97.0"
             xmlns="http://javafx.com/javafx/18">
-    <GridPane layoutX="5.0" layoutY="5.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0"
-              AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
+    <GridPane layoutX="3.0" layoutY="3.0">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
         </columnConstraints>
         <rowConstraints>
             <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
             <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
         </rowConstraints>
-        <GridPane>
-            <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
-                <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0"/>
-            </columnConstraints>
-            <rowConstraints>
-                <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
-            </rowConstraints>
-            <Label fx:id="title" text="Title">
-                <font>
-                    <Font name="System Bold" size="20.0"/>
-                </font>
-            </Label>
-            <Label fx:id="timeLeft" text="Time left: 1d 2h 3p 4s" GridPane.columnIndex="1">
-                <font>
-                    <Font size="16.0"/>
-                </font>
-            </Label>
-        </GridPane>
+        <Label fx:id="title" text="Title">
+            <font>
+                <Font name="System Bold" size="20.0"/>
+            </font>
+        </Label>
+        <Label fx:id="timeLeft" text="Time left: 1d 2h 3p 4s" GridPane.rowIndex="1">
+            <font>
+                <Font size="16.0"/>
+            </font>
+        </Label>
         <Label fx:id="desc" alignment="TOP_LEFT" prefHeight="40.0" prefWidth="340"
                text="Description: Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
-               wrapText="true" GridPane.rowIndex="1"/>
+               wrapText="true" GridPane.rowIndex="2"/>
     </GridPane>
 </AnchorPane>
