--- a/src/main/resources/blaplafla/todolist/views/gui/TaskListCell.fxml
+++ b/src/main/resources/blaplafla/todolist/views/gui/TaskListCell.fxml
@@ -1,45 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:id="anchorPane" prefHeight="97.0"
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:id="anchorPane" prefHeight="96.0" prefWidth="358.0"
             xmlns="http://javafx.com/javafx/18">
-    <GridPane layoutX="5.0" layoutY="5.0" prefHeight="29.0" prefWidth="345.0">
+    <GridPane layoutY="5.0" prefHeight="62.0" prefWidth="379.0" AnchorPane.bottomAnchor="3.0"
+              AnchorPane.leftAnchor="3.0" AnchorPane.rightAnchor="3.0" AnchorPane.topAnchor="3.0">
         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
-            <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0"/>
+            <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" minWidth="10.0"/>
         </columnConstraints>
         <rowConstraints>
-            <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
+            <RowConstraints minHeight="10.0" valignment="CENTER" vgrow="SOMETIMES"/>
+            <RowConstraints minHeight="10.0" valignment="CENTER" vgrow="SOMETIMES"/>
+            <RowConstraints minHeight="10.0" valignment="CENTER" vgrow="SOMETIMES"/>
         </rowConstraints>
         <Label fx:id="title" text="Title">
             <font>
-                <Font name="System Bold" size="20.0"/>
+                <Font name="System Bold" size="24.0"/>
             </font>
         </Label>
-        <Label fx:id="timeLeft" text="Time left: 1d 2h 3p 4s" GridPane.columnIndex="1">
-            <font>
-                <Font size="16.0"/>
-            </font>
-        </Label>
-    </GridPane>
-    <GridPane layoutX="5.0" layoutY="32.0">
-        <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
-        </columnConstraints>
-        <rowConstraints>
-            <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
-            <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
-        </rowConstraints>
-        <Label fx:id="desc" alignment="TOP_LEFT" prefHeight="40.0" prefWidth="340"
-               text="Description: Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
-               wrapText="true" GridPane.rowIndex="1"/>
-
-        <Label fx:id="incomplete" text="SubTask incomplete: 0">
-            <font>
-                <Font size="16.0"/>
-            </font>
-        </Label>
+        <Label fx:id="timeLeft" prefHeight="18.0" prefWidth="268.0" text="Time left: 1d 2h 3p 4s"
+               GridPane.rowIndex="1"/>
+        <Label fx:id="incomplete" text="SubTask incomplete: 0" GridPane.rowIndex="2"/>
     </GridPane>
 </AnchorPane>
