--- a/src/main/resources/blaplafla/todolist/views/gui/UndoneSub.fxml
+++ b/src/main/resources/blaplafla/todolist/views/gui/UndoneSub.fxml
@@ -1,15 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <?import javafx.scene.control.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="702.0" prefWidth="447.0"
             style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/18"
             fx:controller="blaplafla.todolist.views.gui.UndoneSub">
-    <ListView fx:id="listViewTask" layoutX="9.0" layoutY="132.0" prefHeight="518.0" prefWidth="429.0"
+    <MenuBar layoutX="29.0" layoutY="34.0" prefHeight="30.0" prefWidth="429.0" style="-fx-view-order: 1;"
+             AnchorPane.leftAnchor="9.0" AnchorPane.topAnchor="14.0">
+        <Menu fx:id="task" mnemonicParsing="false" text="Task">
+            <MenuItem fx:id="delete1" mnemonicParsing="false" onAction="#delete" text="Delete"/>
+            <MenuItem fx:id="toggle1" mnemonicParsing="false" onAction="#toggle" text="Toggle"/>
+            <MenuItem fx:id="detail1" mnemonicParsing="false" onAction="#detail" text="Edit"/>
+            <MenuItem fx:id="add1" mnemonicParsing="false" onAction="#add" text="Edit"/>
+        </Menu>
+    </MenuBar>
+    <Label fx:id="mainTaskName" layoutX="9.0" layoutY="51.0" text="Task name: blablabla" AnchorPane.leftAnchor="9.0"
+           AnchorPane.topAnchor="51.0">
+        <font>
+            <Font name="System Bold" size="20.0"/>
+        </font>
+    </Label>
+    <ListView fx:id="listViewTask" layoutX="6.0" layoutY="151.0" prefHeight="518.0" prefWidth="429.0"
               AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="9.0"/>
-    <GridPane layoutX="9.0" layoutY="657.0" prefHeight="25.0" prefWidth="429.0" AnchorPane.leftAnchor="9.0"
-              AnchorPane.rightAnchor="9.0" AnchorPane.topAnchor="657.0" GridPane.rowIndex="2">
+    <GridPane layoutX="6.0" layoutY="676.0" prefHeight="25.0" prefWidth="429.0" AnchorPane.leftAnchor="9.0"
+              AnchorPane.rightAnchor="9.0" AnchorPane.topAnchor="676.0" GridPane.rowIndex="2">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
             <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
@@ -22,11 +38,17 @@
             <font>
                 <Font size="18.0"/>
             </font>
+            <cursor>
+                <Cursor fx:constant="HAND"/>
+            </cursor>
         </Label>
         <Label fx:id="next" onMouseClicked="#next" text="Next" textAlignment="RIGHT" GridPane.columnIndex="2">
             <font>
                 <Font size="18.0"/>
             </font>
+            <cursor>
+                <Cursor fx:constant="HAND"/>
+            </cursor>
         </Label>
         <Label fx:id="pageLabel" layoutX="10.0" layoutY="10.0" text="Page 1" GridPane.columnIndex="1">
             <font>
@@ -34,45 +56,64 @@
             </font>
         </Label>
     </GridPane>
-    <GridPane layoutX="9.0" layoutY="43.0" prefHeight="30.0" prefWidth="409.0" AnchorPane.leftAnchor="9.0"
-              AnchorPane.rightAnchor="9.0">
-        <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
-            <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0"/>
-        </columnConstraints>
-        <rowConstraints>
-            <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
-        </rowConstraints>
-        <Label fx:id="undone" text="Undone list">
-            <font>
-                <Font name="System Bold" size="20.0"/>
-            </font>
-        </Label>
-        <Button fx:id="refresh" mnemonicParsing="false" onAction="#addData" prefHeight="30.0" prefWidth="80.0"
-                text="Refresh" GridPane.columnIndex="1"/>
-    </GridPane>
-    <GridPane layoutX="9.0" layoutY="85.0" AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="9.0">
-        <columnConstraints>
-            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0"/>
-            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0"/>
-            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0"/>
-            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0"/>
-        </columnConstraints>
-        <rowConstraints>
-            <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
-        </rowConstraints>
-        <Button fx:id="detail" mnemonicParsing="false" onAction="#detail" prefWidth="80.0" text="Detail"
-                GridPane.columnIndex="3"/>
-        <Button fx:id="toggle" mnemonicParsing="false" onAction="#toggle" prefWidth="80.0" text="Toggle"
-                GridPane.columnIndex="2"/>
-        <Button fx:id="delete" mnemonicParsing="false" onAction="#delete" prefWidth="80.0" text="Delete"
-                GridPane.columnIndex="1"/>
-        <Button fx:id="add" mnemonicParsing="false" onAction="#add" prefWidth="80.0" text="Add"/>
-    </GridPane>
-    <Label fx:id="mainTaskName" layoutX="9.0" layoutY="14.0" text="Task name: blablabla" AnchorPane.leftAnchor="9.0"
-           AnchorPane.topAnchor="14.0">
+    <Label fx:id="undone" layoutX="9.0" layoutY="75.0" text="Undone list">
         <font>
             <Font name="System Bold" size="20.0"/>
         </font>
     </Label>
+    <ImageView fx:id="back" fitHeight="32.0" fitWidth="53.0" layoutX="378.0" layoutY="73.0" onMouseClicked="#back"
+               pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="33.0">
+        <cursor>
+            <Cursor fx:constant="HAND"/>
+        </cursor>
+        <Image url="@icon/arrow.png"/>
+    </ImageView>
+    <GridPane layoutX="60.0" layoutY="118.0" AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="9.0"
+              AnchorPane.topAnchor="108.0">
+        <columnConstraints>
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0"/>
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0"/>
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0"/>
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0"/>
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0"/>
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
+        </rowConstraints>
+        <ImageView fx:id="delete" fitHeight="32.0" fitWidth="32.0" onMouseClicked="#delete" pickOnBounds="true"
+                   preserveRatio="true" GridPane.columnIndex="1">
+            <cursor>
+                <Cursor fx:constant="HAND"/>
+            </cursor>
+            <Image url="@icon/delete.png"/>
+        </ImageView>
+        <ImageView fx:id="toggle" fitHeight="32.0" fitWidth="32.0" onMouseClicked="#toggle" pickOnBounds="true"
+                   preserveRatio="true" GridPane.columnIndex="2">
+            <cursor>
+                <Cursor fx:constant="HAND"/>
+            </cursor>
+            <Image url="@icon/check.png"/>
+        </ImageView>
+        <ImageView fx:id="detail" fitHeight="32.0" fitWidth="32.0" onMouseClicked="#detail" pickOnBounds="true"
+                   preserveRatio="true" GridPane.columnIndex="3">
+            <cursor>
+                <Cursor fx:constant="HAND"/>
+            </cursor>
+            <Image url="@icon/info.png"/>
+        </ImageView>
+        <ImageView fx:id="refresh" fitHeight="32.0" fitWidth="32.0" onMouseClicked="#addData" pickOnBounds="true"
+                   preserveRatio="true" GridPane.columnIndex="4">
+            <cursor>
+                <Cursor fx:constant="HAND"/>
+            </cursor>
+            <Image url="@icon/refresh.png"/>
+        </ImageView>
+        <ImageView fx:id="add" fitHeight="32.0" fitWidth="32.0" onMouseClicked="#add" pickOnBounds="true"
+                   preserveRatio="true">
+            <Image url="@icon/plus.png"/>
+            <cursor>
+                <Cursor fx:constant="HAND"/>
+            </cursor>
+        </ImageView>
+    </GridPane>
 </AnchorPane>
